// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
<DocumentFragment>
  .cache-1rf2owf {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-1rf2owf"
  >
    bodyA
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-54m9u3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-54m9u3.cache-54m9u3 {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-54m9u3"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
<DocumentFragment>
  .cache-u3hznk {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

<p
    class="e1g1zfwd0 cache-u3hznk"
  >
    bodyB
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-oez8ax {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-oez8ax.cache-oez8ax {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-oez8ax"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
<DocumentFragment>
  .cache-17g0p4v {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<p
    class="e1g1zfwd0 cache-17g0p4v"
  >
    bodyC
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1jprulc {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1jprulc.cache-1jprulc {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1jprulc"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
<DocumentFragment>
  .cache-1ofwr8y {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<p
    class="e1g1zfwd0 cache-1ofwr8y"
  >
    bodyD
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-368isp {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-368isp.cache-368isp {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-368isp"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "command" renders correctly 1`] = `
<DocumentFragment>
  .cache-iuvyk0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
}

<code
    class="e1g1zfwd0 cache-iuvyk0"
  >
    command
  </code>
</DocumentFragment>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-ygt0l8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-ygt0l8.cache-ygt0l8 {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-ygt0l8"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "default" renders correctly 1`] = `
<DocumentFragment>
  .cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="e1g1zfwd0 cache-b3zt23"
  >
    default
  </div>
</DocumentFragment>
`;

exports[`Typography variant "default" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-9vl154 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-9vl154.cache-9vl154 {
  width: 100px;
}

<div
    class="e1g1zfwd0 cache-9vl154"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "description" renders correctly 1`] = `
<DocumentFragment>
  .cache-1a6kyhr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
    class="e1g1zfwd0 cache-1a6kyhr"
  >
    description
  </p>
</DocumentFragment>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-g1t2ft {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-g1t2ft.cache-g1t2ft {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-g1t2ft"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
<DocumentFragment>
  .cache-z60w3t {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
    class="e1g1zfwd0 cache-z60w3t"
  >
    hero
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-16vdz2l {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-16vdz2l.cache-16vdz2l {
  width: 100px;
}

<h1
    class="e1g1zfwd0 cache-16vdz2l"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
<DocumentFragment>
  .cache-vuayxh {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
    class="e1g1zfwd0 cache-vuayxh"
  >
    lead
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1drzzm8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1drzzm8.cache-1drzzm8 {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1drzzm8"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
<DocumentFragment>
  .cache-r0q08h {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
    class="e1g1zfwd0 cache-r0q08h"
  >
    lead-block
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-16nm62f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-16nm62f.cache-16nm62f {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-16nm62f"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
<DocumentFragment>
  .cache-tvylxb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
    class="e1g1zfwd0 cache-tvylxb"
  >
    lead-text
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-k1k7c3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-k1k7c3.cache-k1k7c3 {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-k1k7c3"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "link" renders correctly 1`] = `
<DocumentFragment>
  .cache-nzds4r {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.cache-nzds4r:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-nzds4r"
  >
    link
  </div>
</DocumentFragment>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-ujwxf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-ujwxf9.cache-ujwxf9 {
  width: 100px;
}

.cache-ujwxf9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-ujwxf9"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
<DocumentFragment>
  .cache-1jj0vxu {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f6f8;
  color: #151a2d;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
    class="e1g1zfwd0 cache-1jj0vxu"
  >
    samplecode
  </code>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-17zxstv {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f6f8;
  color: #151a2d;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-17zxstv.cache-17zxstv {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-17zxstv"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
<DocumentFragment>
  .cache-1q6k78o {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
}

<small
    class="e1g1zfwd0 cache-1q6k78o"
  >
    tiny
  </small>
</DocumentFragment>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-2xenwj {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-2xenwj.cache-2xenwj {
  width: 100px;
}

<small
    class="e1g1zfwd0 cache-2xenwj"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </small>
</DocumentFragment>
`;

exports[`Typography variant "title" renders correctly 1`] = `
<DocumentFragment>
  .cache-jkpb77 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<h3
    class="e1g1zfwd0 cache-jkpb77"
  >
    title
  </h3>
</DocumentFragment>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-3i3r1f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-3i3r1f.cache-3i3r1f {
  width: 100px;
}

<h3
    class="e1g1zfwd0 cache-3i3r1f"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h3>
</DocumentFragment>
`;

exports[`Typography with maxLines renders correctly 1`] = `
<DocumentFragment>
  .cache-gpidcz {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
    class="e1g1zfwd0 cache-gpidcz"
  >
    Hello
  </p>
</DocumentFragment>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-gpidcz {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.cache-jkpb77 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-gpidcz"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="e1g1zfwd0 cache-jkpb77"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </p>
</DocumentFragment>
`;
